# H-Interview-assignment

./: Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/: app.ts  database.ts  index.ts  server.py
src/module/: patant.py
test/: app.test.ts  jest.config.js  test_app.py
