[tool.poetry]
name = "h-interview-assignment"
version = "0.1.0"
description = ""
authors = ["Miz Nattawut <nattawut.c@wisesight.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
